--- a/coursework_2-master/coursework/pom.xml
+++ b/coursework_2-master/coursework/pom.xml
@@ -117,7 +117,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<skip>true</skip>
+					<mainClass>com.example.coursework.CourseworkApplication</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
